--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 source venv/bin/activate
 export APP_SETTINGS="config.DevelopmentConfig"
-export DATABASE_URL="postgresql://postgres:1234@localhost/bandsfollow"
-python code/app.py
+export DATABASE_URL="postgresql://mikevanviegen:1234@localhost/bandsfollow"
+#python code/app.py
